I created titlePlate, and styled it as the instruction.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
+body {
+    width: 500px;
+}
 
+#titlePlate {
+    width: 150px;
+    height: 50px;
+    background-color: #c97027;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 19px;
+}
 
 
