I added red crystal image for one of the four buttons.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,11 @@ body {
     float: left;
 }
 
+.box input {
+    width: 90px;
+    height: 90px;
+}
+
 #scoreBoard {
     width: 400px;
     height: 100px;
