I added the rest of the images for three other buttons, and changed the background color from blue to white..

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ body {
 .box {
     width: 90px;
     height: 90px;
-    background-color: blue;
+    background-color: white;
     margin: 0 5px 0 5px;
     float: left;
 }
