--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,13 @@ body {
     width: 400px;
     height: 40%;
     margin: 0 10px 10px 0;
+    vertical-align: middle;
+    font-size: 25px;
+    line-height: 40px;
+}
+
+.score p {
+    padding-left: 10px;
 }
 
 .scoreDisplay {
