--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 #titlePlate {
     width: 400px;
     height: 100px;
-    background-color: #c97027;
+    background-color: #3f3d3b;
     display: table-cell;
     vertical-align: middle;
     text-align: center;
@@ -23,7 +23,7 @@ body {
 #instruction {
     height: 300px;
     width: 400px;
-    background-color: #fbe5cc;
+    background-color: #dbd5ce;
     margin: 0 10px 10px 10px;
 }
 
@@ -41,14 +41,14 @@ body {
     width: 280px;
     height: 120px;
     float: left;
-    background-color: #5cc882;
+    background-color: #dbd5ce;
 }
 
 .winLossBox {
     width: 100px;
     height: 120px;
     float: right;
-    background-color: #4afcfe;
+    background-color: #dbd5ce;
 }
 
 .winLossBox p {
@@ -101,4 +101,5 @@ body {
     width: 400px;
     height: 150%;
     margin: 0 10px 10px 0;
+    color: white;
 }
