--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     width: 960px;
     height: 600px;
     font-family: 'Josefin Slab', serif;
+    background: url(https://images.pexels.com/photos/988873/pexels-photo-988873.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&w=500);
 }
 
 #titlePlate {
